# qualified_do

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: test.yml
functo-rs/: Cargo.toml
functo-rs/src/: control.rs  data.rs  impls.rs  lib.rs  nonlinear.rs
functo_rs/: Cargo.toml  README.md
functo_rs/src/: control.rs  data.rs  impls.rs  nonlinear.rs
qualified_do/: Cargo.toml
qualified_do/examples/: debug.rs
qualified_do/src/: desugar.rs  iter.rs  lib.rs  parser.rs  types.rs
qualified_do/tests/: case01.rs  case02.rs  case03.rs  case04.rs  case05.rs  error_case01.stderr  error_case02.stderr  trybuild.rs
qualified_do/tests/failures/: error_case01.rs  error_case02.rs  error_case02.stderr  error_case03.rs  error_case03.stderr
qualified_do/tests/successes/: case02.rs  case05.rs
qualified_do_macro/: .rustc_info.json  Cargo.toml
qualified_do_macro/examples/: debug.rs
qualified_do_macro/src/: desugar.rs  parser.rs  types.rs
qualified_do_macro/tests/: trybuild.rs
qualified_do_macro/tests/failures/: error_case01.rs  error_case01.stderr  error_case02.rs  error_case03.rs  error_case04_refutable_irrefutable.rs  error_case04_refutable_irrefutable.stderr
qualified_do_macro/tests/successes/: case01.rs  case02.rs  case03.rs  case04.rs  case05.rs  case06.rs  case07_irrefute.rs
qualified_do_proptest/: Cargo.toml
qualified_do_proptest/src/: lib.rs
