[workspace]
resolver = "2"
members = ["functo_rs", "qualified_do", "qualified_do_proptest"]

[workspace.dependencies]
syn = { version = "2.0.91", features = [
  "full",
  "visit",
  "visit-mut",
  "fold",
  "extra-traits",
] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
proptest = "1.6.0"
itertools = "0.13.0"
functo_rs = { path = "functo_rs" }
qualified_do = { path = "qualified_do" }
trybuild = { version = "1.0.49", features = ["diff"] }
