[workspace]
resolver = "2"
members = [
  "functo_rs",
  "qualified_do",
  "qualified_do_macro",
  "qualified_do_proptest",
]

[workspace.package]
authors = ["Hiromi ISHII"]
license = "MIT"
edition = "2021"
repository = "https://github.com/konn/qualified_do.git"
rust-version = "1.78"

[workspace.dependencies]
syn = { version = "2.0.91", features = [
  "full",
  "visit",
  "visit-mut",
  "fold",
  "extra-traits",
] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
proptest = "1.6.0"
itertools = "0.13.0"
either = "1.13.0"
functo_rs = { path = "functo_rs" }
qualified_do = { path = "qualified_do" }
qualified_do_macro = { path = "qualified_do_macro" }
trybuild = { version = "1.0.49", features = ["diff"] }
cargo-workspaces = "0.3.6"
