[package]
name = "functo_rs"
version.workspace = true
description = "Control/Data/Unrestricted monad hierarchies for Rust to be used with qualified_do"
readme = "README.md"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
itertools.workspace = true
