[package]
name = "qualified_do"
version = "0.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
qualified_do_macro.workspace = true
functo_rs.workspace = true
itertools.workspace = true

[dev-dependencies]
either.workspace = true
