[package]
name = "qualified_do"
version = "0.0.0"
description = "Composable _qualified_ do expressions for Rust, supporting monad- and applicative-like structures"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
itertools.workspace = true

[dependencies.qualified_do_macro]
path = "../qualified_do_macro"
version = "0.0"

[dependencies.functo_rs]
path = "../functo_rs"
version = "0.0"

[dev-dependencies]
either.workspace = true
