[package]
name = "qualified_do_macro"
version = "0.0.0"
license = "MIT"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/trybuild.rs"

[dev-dependencies]
trybuild.workspace = true
functo_rs.workspace = true
either.workspace = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
