[package]
name = "qualified_do_proptest"
description = "Proptest integration for qualified_do, enabling alternative sytnax for prop_compose!"
autotests = true
version = "0.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
qualified_do.workspace = true
proptest.workspace = true
