[package]
name = "qualified_do_proptest"
description = "Proptest integration for qualified_do, enabling alternative sytnax for prop_compose!"
autotests = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
proptest.workspace = true

[dependencies.qualified_do]
path = "../qualified_do"
version = "0.1"
